fdo#77944: Put updated formula cells into undo document.

Change-Id: Ib9d6a73d485878bfe6c2a1875936025eb4d0a30a
(cherry picked from commit 67563fd55b230eb68fef705ff645af7dab73af73)
Reviewed-on: https://gerrit.libreoffice.org/9260
Tested-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>